--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h>Hello World</h1>
-<h>Hello World</h1>
-<h>Hello World</h1>
-<h>Hello World</h1>
+<h1>Hello World</h1>
+<h1>Hello World</h1>
+<h1>Hello World</h1>
+<h1>Hello World</h1>
